--- a/1-MLproject/gettingstarted.ipynb
+++ b/1-MLproject/gettingstarted.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "6340830d",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "3154e975",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "7f931bfd",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
        "LogisticRegression(max_iter=1000, multi_class='auto', random_state=8888)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,46 +751,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "0257d678",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6.1, 3. , 4.9, 1.8],\n",
-       "       [6.7, 3.1, 4.4, 1.4],\n",
-       "       [4.9, 3.1, 1.5, 0.2],\n",
-       "       [5.4, 3.4, 1.5, 0.4],\n",
-       "       [5.1, 3.5, 1.4, 0.3],\n",
-       "       [4.4, 2.9, 1.4, 0.2],\n",
-       "       [6.1, 2.8, 4.7, 1.2],\n",
-       "       [6.7, 3.1, 5.6, 2.4],\n",
-       "       [4.6, 3.6, 1. , 0.2],\n",
-       "       [5. , 3.6, 1.4, 0.2],\n",
-       "       [7.2, 3.6, 6.1, 2.5],\n",
-       "       [5.6, 2.5, 3.9, 1.1],\n",
-       "       [5.7, 3. , 4.2, 1.2],\n",
-       "       [6.5, 3. , 5.2, 2. ],\n",
-       "       [5.7, 2.5, 5. , 2. ],\n",
+       "array([[6.7, 3.3, 5.7, 2.1],\n",
+       "       [5.7, 2.8, 4.5, 1.3],\n",
+       "       [4.6, 3.2, 1.4, 0.2],\n",
+       "       [5.4, 3. , 4.5, 1.5],\n",
+       "       [5. , 3. , 1.6, 0.2],\n",
+       "       [5.4, 3.7, 1.5, 0.2],\n",
+       "       [4.4, 3. , 1.3, 0.2],\n",
+       "       [5.1, 3.8, 1.6, 0.2],\n",
+       "       [6.9, 3.1, 5.1, 2.3],\n",
+       "       [6.4, 3.1, 5.5, 1.8],\n",
+       "       [6.3, 3.4, 5.6, 2.4],\n",
        "       [5.6, 2.8, 4.9, 2. ],\n",
-       "       [5.2, 3.4, 1.4, 0.2],\n",
-       "       [6.5, 3. , 5.8, 2.2],\n",
-       "       [7.7, 2.8, 6.7, 2. ],\n",
-       "       [5.3, 3.7, 1.5, 0.2],\n",
-       "       [7. , 3.2, 4.7, 1.4],\n",
-       "       [5.8, 4. , 1.2, 0.2],\n",
-       "       [7.2, 3. , 5.8, 1.6],\n",
-       "       [6.3, 2.5, 4.9, 1.5],\n",
-       "       [5. , 3.3, 1.4, 0.2],\n",
-       "       [4.9, 3.6, 1.4, 0.1],\n",
-       "       [5.6, 3. , 4.5, 1.5],\n",
-       "       [5. , 3.2, 1.2, 0.2],\n",
+       "       [4.9, 2.5, 4.5, 1.7],\n",
+       "       [5.8, 2.6, 4. , 1.2],\n",
+       "       [5.7, 4.4, 1.5, 0.4],\n",
+       "       [6.3, 2.7, 4.9, 1.8],\n",
+       "       [5.5, 4.2, 1.4, 0.2],\n",
+       "       [5.6, 2.5, 3.9, 1.1],\n",
+       "       [5.1, 2.5, 3. , 1.1],\n",
+       "       [5. , 3.4, 1.6, 0.4],\n",
+       "       [4.4, 3.2, 1.3, 0.2],\n",
+       "       [7.4, 2.8, 6.1, 1.9],\n",
+       "       [5.7, 3.8, 1.7, 0.3],\n",
+       "       [6.8, 2.8, 4.8, 1.4],\n",
+       "       [6.6, 3. , 4.4, 1.4],\n",
        "       [5.1, 3.8, 1.5, 0.3],\n",
-       "       [4.9, 2.4, 3.3, 1. ]])"
+       "       [6.1, 2.8, 4.7, 1.2],\n",
+       "       [6.2, 2.8, 4.8, 1.8],\n",
+       "       [4.8, 3.1, 1.6, 0.2],\n",
+       "       [6.4, 2.8, 5.6, 2.2]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,18 +801,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "0fd5f8b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 1, 0, 0, 0, 0, 1, 2, 0, 0, 2, 1, 1, 2, 2, 2, 0, 2, 2, 0, 1, 0,\n",
-       "       2, 1, 0, 0, 1, 0, 0, 1])"
+       "array([2, 1, 0, 1, 0, 0, 0, 0, 2, 2, 2, 2, 1, 1, 0, 2, 0, 1, 1, 0, 0, 2,\n",
+       "       0, 1, 1, 0, 1, 1, 0, 2])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1258b298",
    "metadata": {},
    "outputs": [
@@ -833,7 +833,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n"
+      "0.9333333333333333\n"
      ]
     }
    ],
@@ -841,6 +841,79 @@
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(accuracy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b24c4087",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/07/15 10:53:35 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
+      "Successfully registered model 'tracking-quickstart'.\n",
+      "2025/07/15 10:53:41 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: tracking-quickstart, version 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏃 View run skillful-hare-89 at: http://127.0.0.1:5000/#/experiments/246917659016222024/runs/a89fcf481a0147e495424c12856392f9\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/246917659016222024\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Created version '1' of model 'tracking-quickstart'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MLFLOW tracking \n",
+    "import mlflow.sklearn\n",
+    "\n",
+    "\n",
+    "mlflow.set_tracking_uri(uri=\"http://127.0.0.1:5000\")\n",
+    "\n",
+    "# Create a new MLFLOW experiment \n",
+    "mlflow.set_experiment(\"MLFLOW Quickstart\")\n",
+    "\n",
+    "# Start an MLFLOW run \n",
+    "with mlflow.start_run():\n",
+    "    ## Log the hyperparameters\n",
+    "    mlflow.log_params(params)\n",
+    "\n",
+    "    # Log the accuracy metrics\n",
+    "    mlflow.log_metric(\"accuracy\", accuracy)\n",
+    "\n",
+    "    # Set a tag that we can use to remind ourselves what this run was for \n",
+    "    mlflow.set_tag(\"Training Info\", \"Basic LR model for iris data\")\n",
+    "\n",
+    "    # Infer the model signature \n",
+    "    signature = infer_signature(X_train, lr.predict(X_train))\n",
+    "\n",
+    "    # Log the model \n",
+    "    model_info = mlflow.sklearn.log_model(\n",
+    "        sk_model=lr, \n",
+    "        artifact_path=\"iris model\",\n",
+    "        signature=signature,\n",
+    "        input_example=X_train,\n",
+    "        registered_model_name=\"tracking-quickstart\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb10f072",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
