model building and mlflow tracking

--- a/1-MLproject/gettingstarted.ipynb
+++ b/1-MLproject/gettingstarted.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "74f4ac3d",
+   "metadata": {},
+   "source": [
+    "# Getting Started With ML Project With MLFLOW \n",
+    "- Installing MLflow.\n",
+    "- Starting a local MLflow Tracking Server. \n",
+    "- Logging and registering a model with MLflow. \n",
+    "- Loading a logged model for inference using MLflow's pyfunc flavor. \n",
+    "- Viewing the experiment results in the MLflow UI."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "6340830d",
